# COMP2811

./: README.md
database/: init.sql
src/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
src/pages/: Compliance.cpp  Compliance.hpp  Env_litter.cpp  Env_litter.hpp  Fluoride.cpp  Fluoride.hpp  Organic.cpp  Organic.hpp  Overview.cpp  Overview.hpp
src/utils/: database_utils.cpp  database_utils.hpp  utils.hpp
